Fixes for z-index fighting

--- a/src/assets/styles/landing.scss
+++ b/src/assets/styles/landing.scss
@@ -6,11 +6,13 @@
   color: white;
   overflow: hidden;
 
+
   .header {
     position: absolute;
     top: 1rem;
     left: 50%;
     transform: translateX(-50%);
+    z-index: 20;
 
     &__wrap {
       padding: 10px;
@@ -18,10 +20,12 @@
       align-items: center;
       justify-content: space-between;
       width: 60vw;
+
       @media (max-width: 1056px) {
         width: 90vw;
       }
     }
+
     &__left {
       display: flex;
       align-items: center;
@@ -36,13 +40,5 @@
         font-weight: 700;
       }
     }
-  }
-  .centered_link {
-    display: flex;
-    flex: 1;
-    height: 100vh;
-    justify-content: flex-start;
-    align-items: center;
-    z-index: 10;
   }
 }
