--- a/src/assets/styles/loader.scss
+++ b/src/assets/styles/loader.scss
@@ -8,7 +8,7 @@
   right: 0;
   height: 100vh;
   width: 100%;
-  z-index: 99;
+  z-index: 10;
   background-color: #0b134f;
   display: grid;
   place-items: center;
@@ -23,6 +23,7 @@
     transform: translate(-50%, -50%);
     width: 85%;
     opacity: 0;
+
   }
 
   &__box {
@@ -32,6 +33,7 @@
     border: 3px solid $green-color;
     border-top: 3px solid $dark-green-color;
     border-bottom: 3px solid $dark-green-color;
+
     @media (max-width: 600px) {
       & {
         width: 90vw;
@@ -48,6 +50,7 @@
     transform: translateX(-50%);
     background-color: #ccc;
     border-radius: 2px;
+
     &--inner {
       height: 100%;
       width: 0;
@@ -79,11 +82,13 @@
       border-radius: 50%;
       background: #fff;
       animation: pulse 1s infinite;
+
       @keyframes pulse {
         from {
           opacity: 0;
           background: $green-color;
         }
+
         to {
           opacity: 1;
         }
@@ -117,10 +122,12 @@
 
   &__width_animation {
     animation: width_animation 1s forwards;
+
     @keyframes width_animation {
       0% {
         width: 85%;
       }
+
       100% {
         width: 280px;
       }
