--- a/src/assets/styles/styledLinks.scss
+++ b/src/assets/styles/styledLinks.scss
@@ -3,7 +3,6 @@
   display: grid;
   place-items: center;
   overflow: hidden;
-  z-index: 100;
 
   &:before {
     content: "";
